# archipel-core

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: app.rs
crates/ident/: Cargo.toml
crates/ident/src/: lib.rs
crates/ident_macros/: Cargo.toml
crates/java_string/: Cargo.toml
crates/java_string/src/: lib.rs
crates/math/: Cargo.toml
crates/nbt/: Cargo.toml
crates/networking/: Cargo.toml  README.md
crates/networking/src/: client.rs  connect.rs  legacy_ping.rs  lib.rs  packet_io.rs
crates/protocol/: Cargo.toml
crates/protocol-derive/: Cargo.toml
crates/protocol-derive/src/: decode.rs  encode.rs  packet.rs
crates/protocol/src/: decode.rs  encode.rs  lib.rs  packet_frame.rs
crates/protocol/src/packets/: mod.rs
crates/protocol/src/packets/handshaking/: handshake_c2s.rs  mod.rs
crates/protocol/src/packets/login/: login_compression_s2c.rs  login_disconnect_s2c.rs  login_hello_c2s.rs  login_hello_s2c.rs  login_key_c2s.rs  login_query_request_s2c.rs  login_query_response_c2s.rs  login_success_s2c.rs  mod.rs
crates/protocol/src/packets/status/: mod.rs  query_ping_c2s.rs  query_pong_s2c.rs  query_request_c2s.rs  query_response_s2c.rs
crates/protocol/src/packets/types/: mod.rs  profile.rs  var_int.rs  var_long.rs
crates/protocol/src/types/: mod.rs  packet.rs
crates/protocol/src/types/impls/: mod.rs  other.rs  primitives.rs  raw.rs  sequence.rs  strings.rs
crates/text/: Cargo.toml
crates/text/src/: lib.rs  tests.rs
crates/utils/: Cargo.toml
crates/world_core/: Cargo.toml
projects/client/: Cargo.toml
projects/client/src/: main.rs
projects/server/: Cargo.toml
projects/server/src/: logical_server.rs
projects/server/src/server_shell/: config.rs
server/: Cargo.toml
server/src/: app.rs  logical_server.rs  main.rs
server/src/server_shell/: config.rs  mod.rs
src/: bootstrap.rs  main.rs
src/server/: config.rs  mod.rs  server.rs
