[package]
name = "archipel-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
serde = "1"
serde_json = "1"
tracing = "0.1"
validator = { version = "0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = [
    "json",
    "time",
    "env-filter",
] }
