[workspace.package]
edition = "2021"

[workspace]
resolver = "2"
members = ["projects/*", "crates/*"]

[workspace.dependencies]
anyhow = "1.0.82"
tokio = { version = "1.37.0", features = ["full"] }
flume = "0.11.0"
tracing = "0.1.40"
ctor = "0.2.8"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1"
rand = "0.8.4"
thiserror = "1.0.59"
uuid = "1.8.0"
cfb8 = "0.8.1"
flate2 = "1.0.30"
aes = "0.8.4"
valence_text = "0.2.0-alpha.1+mc.1.20.1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
byteorder = "1.4"
cesu8 = "1.1.0"
indexmap = "2.2.1"
pretty_assertions = "1.3.0"

gen = { path = "crates/gen" }
math = { path = "crates/math" }
utils = { path = "crates/utils" }
networking = { path = "crates/networking" }
world_core = { path = "crates/world_core" }
protocol = { path = "crates/protocol", features = [
    "encryption",
    "compression",
] }
protocol_derive = { path = "crates/protocol-derive" }
ident = { path = "crates/ident" }
ident_macros = { path = "crates/ident_macros" }
text = { path = "crates/text" }
nbt = { path = "crates/nbt" }
java_string = { path = "crates/java_string" }
