[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world_core.workspace = true
math.workspace = true
gen.workspace = true
utils.workspace = true

anyhow.workspace = true
rand.workspace = true


bytemuck = "1.14.1"
tuple_list = "0.1.3"
wgpu = "0.18.0"
image = { version = "0.24", features = ["png"] }
pollster = "0.3.0"
egui = { git = "https://github.com/emilk/egui.git" }
egui-winit = { git = "https://github.com/emilk/egui.git" }
egui-wgpu = { git = "https://github.com/emilk/egui.git" }




