[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10.1", features = ["full"] }
tracing = "0.1.40"
anyhow = "1.0.77"
tokio-util = "0.7.10"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "time",
    "env-filter",
] }
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.12"