[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
networking.workspace = true
flume.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true


tokio-util = "0.7.10"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "time",
    "env-filter",
] }
serde.workspace = true
toml = "0.8.12"