[package]
name = "protocol_derive"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
heck = "0"

[lib]
name = "protocol_derive"
path = "src/lib.rs"
proc-macro = true
