[package]
name = "protocol"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder.workspace = true
protocol_derive.workspace = true
derive_more = { version = "0", features = [
    "from",
    "into",
    "deref",
    "deref_mut",
    "as_ref",
] }
anyhow.workspace = true
bytes = "1"
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
cfb8 = { workspace = true, optional = true }
aes = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
valence_text.workspace = true
ident.workspace = true

[dev-dependencies]
rand = "0.8"

[features]
encryption = ["dep:aes", "dep:cfb8"]
compression = ["dep:flate2"]
